--- a/all/themes/jjamerson_lb/stylesheets/catalog.berklee.edu.css
+++ b/all/themes/jjamerson_lb/stylesheets/catalog.berklee.edu.css
@@ -153,3 +153,40 @@ span#rdetail_hold_counts p {padding-left: 0;}
 	margin-left: -20px;
   margin-top: 2px;
 }
+#block-weekhours-weekhours .oneweekhours span.title{
+	display:none;
+}
+#feedback_simple a.side-tab-feedback_simple {
+  cursor: pointer;
+  display: block;
+  overflow: hidden;
+  position: fixed;
+  text-decoration: none !important;
+  z-index: 9999;
+  display: block;
+  -webkit-transform: rotate(-90deg);
+  -moz-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
+  -o-transform: rotate(-90deg);
+  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  font-weight: bold;
+  padding: 20px 16px 0 16px;
+  background: none;
+  text-shadow: 0px 0px 10px #000, 0px 0px 10px #000;
+  color: #fff !important;
+  letter-spacing: 0;
+  -webkit-text-stroke: 1px;
+  top: 204px;
+  right: -142px;
+  font-size: 30px !important;
+  padding: 8px 12px;
+  width:284px;
+}
+#feedback_simple a.side-tab-feedback_simple i.fa-commenting:before {
+  position: absolute;
+  margin-top: -32px;
+}
+
