--- a/eds/ebscohost.dev.css
+++ b/eds/ebscohost.dev.css
@@ -1,3 +1,4 @@
+/* minifies by http://www.cleancss.com/css-minify/ */
 /* from bcm-jj-all.css */
 @charset "UTF-8";
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300);
@@ -182,6 +183,9 @@ body.front #page.open {
   font-weight: 400;
   vertical-align: middle;
 }
+#block-weekhours-weekhours .oneweekhours span.title{
+	display:none;
+}
 .region-footer div.copy {
   float: right;
 }
@@ -316,4 +320,38 @@ div.customerLogo,
 #mainContentArea .color-p4, #mainContentArea a:link, #mainContentArea a:visited {
   color: #d81118 !important;
   text-decoration: none;
+}
+
+#feedback_simple a.side-tab-feedback_simple {
+  cursor: pointer;
+  display: block;
+  overflow: hidden;
+  position: fixed;
+  text-decoration: none !important;
+  z-index: 9999;
+  display: block;
+  -webkit-transform: rotate(-90deg);
+  -moz-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
+  -o-transform: rotate(-90deg);
+  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  font-weight: bold;
+  padding: 20px 16px 0 16px;
+  background: none;
+  text-shadow: 0px 0px 10px rgba(0,0,0,.7);
+  color: #fff !important;
+  letter-spacing: 0;
+  -webkit-text-stroke: 1px;
+  top: 204px;
+  right: -142px;
+  font-size: 30px !important;
+  padding: 8px 12px;
+  width:284px;
+}
+#feedback_simple a.side-tab-feedback_simple i.fa-commenting:before {
+  position: absolute;
+  margin-top: -32px;
 }
